--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-     "start": "node server/server.js",
+     "prestart": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
